Continue to work on the HistogramColorBandControl Selection logic.

--- a/src/MSetExplorer/ColorBandSetHistogram/Controls/CbsHistogramControl.xaml
+++ b/src/MSetExplorer/ColorBandSetHistogram/Controls/CbsHistogramControl.xaml
@@ -62,7 +62,7 @@
                             MinContentScale="{Binding MinimumDisplayZoom, Mode=TwoWay}" 
                             >
 
-                            <local:HistogramColorBandControl Focusable="True"
+                            <local:HistogramColorBandControl Focusable="True" IsTabStop="True"
                                 x:Name="HistogramColorBandControl1">
 
                                 <local:HistogramColorBandControl.InputBindings>
