--- a/src/MSetExplorer/Explorer/ExplorerWindow.xaml
+++ b/src/MSetExplorer/Explorer/ExplorerWindow.xaml
@@ -242,7 +242,7 @@
         <!-- Histogram -->
         <Border Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="3" x:Name="botRow" BorderThickness="0" HorizontalAlignment="Stretch" Height="242" Margin="0,0,5,5" Visibility="Visible">
 
-            <local:CbsHistogramControl x:Name="cbsHistogram1"/>
+            <local:CbsHistogramControl x:Name="cbsHistogram1" IsTabStop="False"/>
 
         </Border>
 
