--- a/src/MSetExplorer/ColorBand/ColorBandUserControl.xaml
+++ b/src/MSetExplorer/ColorBand/ColorBandUserControl.xaml
@@ -42,7 +42,7 @@
             <!-- Percentage / Blend Style -->
             <StackPanel Orientation="Horizontal">
                 <TextBlock Height="21" Margin="5,5,2,5" FontSize="14" Text="Percentage:" />
-                <TextBox Height="21" Margin="0,5" Text="{Binding Path=CurrentColorBand.Percentage, Mode=OneWay}" Width="50" VerticalAlignment="Center" TabIndex="7"/>
+                <TextBox Height="21" Margin="0,5" Text="{Binding Path=CurrentColorBand.Percentage, Mode=OneWay}" Width="50" VerticalAlignment="Center"/>
 
                 <TextBlock Width="77" Margin="8,5,3,5" FontSize="14" Text="Blend Style:" />
                 <ComboBox x:Name="cmbBlendStyle" Width="64" Height="21" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,5,0,5"
