--- a/src/MSetExplorer/ColorBandSetHistogram/Controls/CbsHistogramControl.xaml
+++ b/src/MSetExplorer/ColorBandSetHistogram/Controls/CbsHistogramControl.xaml
@@ -132,16 +132,18 @@
                                 
                                     <TextBlock Height="21" Margin="5,5,5,0" FontSize="14" Text="of" />
                                     <TextBox Text="{Binding Path=ColorBandsCount, Mode=OneWay}"  Width="30" Height="21" VerticalAlignment="Center" Margin="0,3"/>
-                                    <CheckBox x:Name="chkBxCutoffs" Margin="12,5,0,0" IsChecked="{Binding Path=EditingCutoffs, Mode=TwoWay}">Cutoffs</CheckBox>
-                                
-                                    <!--<TextBlock Height="21" Margin="5" FontSize="14" Text="total" />-->
+                                    
+                                    <!--<CheckBox x:Name="chkBxCutoffs" Margin="12,5,0,0" IsChecked="{Binding Path=EditingCutoffs, Mode=TwoWay}">Cutoffs</CheckBox>-->
+                                    <TextBlock Height="21" Margin="12,5,5,0" FontSize="14" Text="Edit Mode"/>
                                 </StackPanel>
 
                                 <!-- Left / Right -->
                                 <StackPanel HorizontalAlignment="Left" Orientation="Horizontal" Margin="10,3,0,3">
                                     <Button Width="70" Margin="0,0,10,0" Content="&lt; L" Click="MoveLeftButton_Click" />
                                     <Button Width="70" Content="R &gt;" Click="MoveRightButton_Click" />
-                                    <CheckBox x:Name="chkBxColors" Margin="29,5,0,0"  IsChecked="{Binding Path=EditingColors, Mode=TwoWay}">Colors</CheckBox>
+                                    
+                                    <!--<CheckBox x:Name="chkBxColors" Margin="29,5,0,0"  IsChecked="{Binding Path=EditingColors, Mode=TwoWay}">Colors</CheckBox>-->
+                                    <TextBlock Height="21" Margin="34,0,5,0" FontSize="14" Text="{Binding Path=CurrentCbEditModeAsString, Mode=OneWay}"/>
                                 </StackPanel>
 
                                 <!-- Percentage 
