--- a/src/MSetExplorer/ColorBandSet/NotUsed/ColorBandEditorDialog.xaml
+++ b/src/MSetExplorer/ColorBandSet/NotUsed/ColorBandEditorDialog.xaml
@@ -43,10 +43,10 @@
 
                 <StackPanel Orientation="Horizontal" Margin="0,5,0,0">
                     <TextBlock Width="69" Margin="5,2,5,5" FontSize="14" Text="Start Color:" />
-                    <local:ColorBandColorButtonControl ColorBandColor="{Binding Path=StartColor}" Width="63" Height="21" Margin="2,0,3,5"/>
+                    <local:ColorBandColorButtonControl ColorBandColor="{Binding Path=StartColor}" CustomMouseUp="StartColor_CustomMouseUp" Width="63" Height="21" Margin="2,0,3,5"/>
 
                     <TextBlock Width="65" Margin="5,2,5,5" FontSize="14" Text="End Color:" />
-                    <local:ColorBandColorButtonControl x:Name="cbcBtnCtlEndColor" ColorBandColor="{Binding Path=ActualEndColor}" Width="63" Height="21" Margin="0,0,0,5"/>
+                    <local:ColorBandColorButtonControl x:Name="cbcBtnCtlEndColor" ColorBandColor="{Binding Path=ActualEndColor}" CustomMouseUp="EndColor_CustomMouseUp" Width="63" Height="21" Margin="0,0,0,5"/>
                 </StackPanel>
 
             </StackPanel>
