--- a/src/MSetExplorer/ColorBand/ColorBandUserControl.xaml
+++ b/src/MSetExplorer/ColorBand/ColorBandUserControl.xaml
@@ -36,7 +36,7 @@
                 
                 <TextBlock Width="69" Margin="17,5,3,5" FontSize="14" Text="Start Color:" />
                 <local:ColorBandColorButtonControl  Margin="0,5" Width="65" Height="21" x:Name="cbcButtonControl1"
-                    ColorBandColor="{Binding Path=CurrentColorBand.StartColor}"
+                    Color="{Binding Path=CurrentColorBand.StartColor}"
                     CustomMouseUp="StartColor_CustomMouseUp"
                 />
             </StackPanel>
@@ -62,7 +62,8 @@
 
                 <TextBlock Width="69" Margin="17,5,3,5" FontSize="14" Text="End Color:" />
                 <local:ColorBandColorButtonControl Margin="0,5" Width="65" Height="21" x:Name="cbcButtonControl2"
-                    ColorBandColor="{Binding Path=CurrentColorBand.ActualEndColor}"
+                    Color="{Binding Path=CurrentColorBand.EndColor}"
+                    EffectiveColor="{Binding Path=CurrentColorBand.ActualEndColor}"
                     CustomMouseUp="EndColor_CustomMouseUp"
                 />
             </StackPanel>
